--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="left-side">
                         <div class="profile-info">
                             <img src="assets/images/profile.jpg" alt="">
-                            <h3>Jonney Anderson</h3>
+                            <h3>Talita Magdalena</h3>
                             <span>Web Designer</span>
                         </div>
                         <h4 class="ltitle">Contact</h4>
@@ -29,8 +29,8 @@
                                 <i class="fas fa-phone"></i>
                             </div>
                             <div class="detail">
-                                +123 8767 5465 <br>
-                                +122 2345 3763
+                                +62857 6543 3221<br>
+                                +6245 6754 7860
                             </div>
                         </div>
                         <div class="contact-box pb0">
@@ -39,15 +39,15 @@
                             </div>
                             <div class="detail">
                                 info@smarteyeapps.com <br>
-                                www.smarteyeapps.com
-                            </div>
+                                talitamagdalena980@gmail.com
+                            www.available.com
                         </div>
                         <div class="contact-box">
                             <div class="icon">
                                 <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="detail">
-                                First Floor,Vincent Plaza, Toranto, Canada
+                                Pangrango, Pare, Kediri, Jawa Timur
                             </div>
                         </div>
                         <h4 class="ltitle">Contact</h4>
@@ -89,7 +89,7 @@
                         </div>
                         <h2 class="rit-titl"><i class="far fa-user"></i> Profile</h2>
                         <div class="about">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan purus enim, a vestibulum est tristique sit amet. Suspendisse nibh nisl, imperdiet sit amet mi vitae, elementum elementum nibh. Vivamus vitae eros malesuada, convallis dolor malesuada, lobortis ex. Sed cursus augue risus, ac semper est consectetur vitae. Praesent consequat metus sit amet rhoncus luctus.</p>
+                            <p>I was born in Kediri, 5 February 2004. And now I'm 16 years old. My hobby is singing. 
                             <div class="btn-ro row no-margin">
                                 <ul class="btn-link">
                                     <li>
